--- a/src/components/DisbursementForm.css
+++ b/src/components/DisbursementForm.css
@@ -40,11 +40,12 @@ button:hover {
 }
 
 .form-container {
-  background-color: #000000;
+  background-color: #19181a;
   padding: 20px;
   border-radius: 10px;
-  width: 500px;
+  width: 800px;
   max-width: 90%;
+  border-radius: 30px;
   max-height: 80vh; /* Limit the height of the modal */
   overflow-y: auto; /* Enable vertical scrolling if content exceeds */
 }
