--- a/src/components/CashReceiptJournalTable.css
+++ b/src/components/CashReceiptJournalTable.css
@@ -8,7 +8,10 @@
   border-radius: 8px;
   color: white;
 }
-
+.form-inputs{color: #ff8c42;
+  width: 100%;
+  padding: 12px;
+  margin-top: 5px;}
 .form-row {
   margin-bottom: 20px;
 }
@@ -30,7 +33,7 @@ label {
   background-color: #333;
   border: 1px solid #444;
   border-radius: 5px;
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 1rem;
 }
 
@@ -71,7 +74,7 @@ button {
 }
 
 .submit-button {
-  background-color: #ff8c42;
+  background-color: #2012eb;
   color: white;
 }
 
