--- a/src/components/DisbursementForm.css
+++ b/src/components/DisbursementForm.css
@@ -1,7 +1,7 @@
 /* General Styles */
 .disbursement-container {
   font-family: Arial, sans-serif;
-  background-color: #1a1a1a;
+  background-color: #ffffff;
   color: #ffffff;
   padding: 20px;
   border-radius: 10px;
@@ -12,7 +12,7 @@ h1, h2 {
 }
 
 button {
-  background-color: #ff8c42;
+  background-color: #0004ff;
   color: #ffffff;
   border: none;
   padding: 10px 20px;
@@ -40,10 +40,10 @@ button:hover {
 }
 
 .form-container {
-  background-color: #19181a;
+  background-color: #ffffff;
   padding: 20px;
   border-radius: 10px;
-  width: 800px;
+  width: 900px;
   max-width: 90%;
   border-radius: 30px;
   max-height: 80vh; /* Limit the height of the modal */
@@ -57,7 +57,7 @@ button:hover {
 label {
   display: block;
   margin-bottom: 5px;
-  color: #ff8c42;
+  color: #000000;
 }
 
 .form-input {
@@ -65,8 +65,8 @@ label {
   padding: 10px;
   border: 1px solid #444;
   border-radius: 5px;
-  background-color: #000000;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #000000;
 }
 
 .form-input:focus {
@@ -118,12 +118,12 @@ tr:hover {
 }
 
 .edit-button:hover, .delete-button:hover {
-  background-color: #ff8c42;
+  background-color: #291ce2;
   color: #ffffff;
 }
 
 /* Icons */
 .icon {
   margin-right: 5px;
-  color: #ffffff;
+  color: #000000;
 }
