--- a/src/Home.css
+++ b/src/Home.css
@@ -230,7 +230,7 @@
 .footer {
   background-color: #141414; /* Netflix dark gray */
   color: #e5e5e5;
-  padding: 2rem; /* Reduced padding */
+  padding: 0rem; /* Reduced padding */
   border-top: 1px solid #e50914; /* Netflix red */
 }
 
@@ -256,7 +256,7 @@
 }
 
 .footer-content .highlight {
-  color: #e50914; /* Netflix red */
+  color: #09e5b5; /* Netflix red */
   font-weight: 700;
 }
 
@@ -268,7 +268,7 @@
 }
 
 .footer-links a {
-  color: #ff0000;
+  color: #00ecc5;
   text-decoration: none;
   font-weight: 500;
   font-size: 0.9rem;
