--- a/src/components/FinancialOverview.css
+++ b/src/components/FinancialOverview.css
@@ -56,3 +56,14 @@
   .print-button button:hover {
     background-color: #218838;
   }
+  .dropdown-container {
+    margin: 20px 0;
+  }
+  
+  select {
+    padding: 10px;
+    font-size: 16px;
+    background-color: #000000;
+color: azure;
+  }
+  
